Bug #7096
closedvioif should not log to the console on boot, or ever
100%
Description
At the moment, a vioif (VirtIO) NIC in a SmartOS guest causes us to log this to the console on boot:
NOTICE: vioif0: Got MAC address from host: 52:44:a3:55:f1:2
This should just go into the system log, not on the console.
There are also a number of uses of dev_err() to report conditions like failing kernel memory allocations. Potentially high-volume syslog or console log messages are always a bad idea, especially if they're not operator-actionable. Either the system state is now incorrect, and the driver should panic, or more likely it should just bump a counter and try to allocate again next time a packet arrives. Logging these messages in an interrupt handler (which can wedge, see OS-4970; or even potentially induce further allocations) is to give ideal behaviour a staggeringly wide berth.
Updated by Electric Monk about 5 years ago
- Status changed from New to Closed
git commit 54b146cf23443d91aef04e2d2a59b7434add3030
commit 54b146cf23443d91aef04e2d2a59b7434add3030 Author: Joshua M. Clulow <jmc@joyent.com> Date: 2018-10-06T21:16:12.000Z 7096 vioif should not log to the console on boot, or ever Reviewed by: Alexander Pyhalov <apyhalov@gmail.com> Reviewed by: Andy Stormont <astormont@racktopsystems.com> Reviewed by: Igor Kozhukhov <igor@dilos.org> Reviewed by: Toomas Soome <tsoome@me.com> Approved by: Dan McDonald <danmcd@joyent.com>