7096 vioif should not log to the console on boot, or ever Reviewed by: Alexander Pyhalov <apyhalov@gmail.com> Reviewed by: Andy Stormont <astormont@racktopsystems.com> Reviewed by: Igor Kozhukhov <igor@dilos.org> Reviewed by: Toomas Soome <tsoome@me.com> Approved by: Dan McDonald <danmcd@joyent.com>